[package]
name = "myssh"
description = "Checking for existing SSH keys"
version = "0.0.4"
authors = ["W Kristianto <w.kristories@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cursive = "0.21.1"

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
opt-level = 1              
overflow-checks = false  