[package]
name = "myssh"
description = "Inspect and manage SSH keys in your .ssh directory"
version = "0.0.4"
authors = ["W Kristianto <w.kristories@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/devtical/myssh"
homepage = "https://github.com/devtical/myssh"
keywords = ["ssh", "cli", "tui", "security", "keys"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
cursive = "0.21.1"
rand_core = { version = "0.10", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption", "p256", "rsa", "std"] }

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
opt-level = 1              
overflow-checks = false  
